--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-  <title>Fragen Generator</title>
   <meta charset="UTF-8">
+  <title>Fragen Generator</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; margin-top: 80px; }
+    button { padding: 15px; font-size: 18px; cursor: pointer; }
+    #frage { font-size: 24px; margin-top: 40px; }
+  </style>
 </head>
+<body>
 
-<body style="font-family: Arial; text-align: center; margin-top: 100px;">
+<script>
+  // === Passwortschutz ===
+  const passwort = "meinpasswort123"; // <-- hier dein Passwort setzen
+
+  let eingabe = prompt("Bitte Passwort eingeben:");
+
+  if (eingabe !== passwort) {
+    document.write("<h2>Zugriff verweigert</h2>");
+    throw new Error("Passwort falsch");
+  }
+</script>
 
 <h1>Fragen Generator</h1>
 
-<button onclick="randomFrage()" style="padding:15px; font-size:18px;">
-  Frage generieren
-</button>
+<button onclick="randomFrage()">Frage generieren</button>
 
-<p id="frage" style="font-size:24px; margin-top:40px;"></p>
+<p id="frage"></p>
 
 <script>
-const fragen = [
-  "Frage 1 hier",
-  "Frage 2 hier",
-  "Frage 3 hier"
-  // hier einfach deine 130 Fragen einfügen
-];
+  // === Liste deiner Fragen ===
+  const fragen = [
+    "Wie setze ich den Titel für ein Video an?",
+    "Wie bewertet der Chatbot die Relevanz von Informationen?",
+    "Welche Eingaben versteht der Chatbot am besten?",
+    // ... hier deine restlichen ~130 Fragen einfügen
+  ];
 
-function randomFrage() {
-  const zufall = Math.floor(Math.random() * fragen.length);
-  document.getElementById("frage").textContent = fragen[zufall];
-}
+  function randomFrage() {
+    const zufall = Math.floor(Math.random() * fragen.length);
+    document.getElementById("frage").textContent = fragen[zufall];
+  }
 </script>
 
 </body>
