--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 let fragen = [];
 
 // CSV laden und in Array umwandeln
-fetch('fragen.csv')
+fetch('rem-fragen.csv')
   .then(response => response.text())
   .then(text => {
     // CSV in Zeilen splitten
