--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
   <meta charset="UTF-8">
   <title>Fragen Generator</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 80px; }
+    body { font-family: Arial; text-align: center; margin-top: 80px; }
     button { padding: 15px; font-size: 18px; cursor: pointer; }
-    #frage { font-size: 24px; margin-top: 40px; }
+    #frage { font-size: 24px; margin-top: 40px; max-width: 800px; margin-left: auto; margin-right: auto; }
   </style>
 </head>
-  
-<body><h1>Fragen Generator</h1>
+<body>
 
-<button onclick="randomFrage()">Frage generieren</button>
+<h1>Fragen Generator</h1>
 
-<p id="frage"></p>
+<button onclick="randomFrage()">Szenario generieren</button>
+
+<p id="frage">Klicke auf den Button, um ein Szenario anzuzeigen.</p>
+
+<!-- PapaParse Bibliothek -->
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
 <script>
-let fragen = [];
+let szenarien = [];
 
-// CSV laden und in Array umwandeln
-fetch('rem-fragen.csv')
-  .then(response => response.text())
-  .then(text => {
-    // CSV in Zeilen splitten
-    const lines = text.split('\n');
-// Header ignorieren
-    const dataLines = lines.slice(1);
-
-    // Nur die zweite Spalte aus jeder Zeile extrahieren
-    szenarien = dataLines.map(line => {
-      const cols = line.split(',');  // Spalten anhand Komma trennen
-      return cols[1] ? cols[1].trim() : '';  // zweite Spalte, trim für Leerzeichen
-    }).filter(s => s.length > 0); // leere Einträge entfernen
-  })
-  .catch(err => console.error('Fehler beim Laden der CSV:', err));
+// CSV laden und parsen
+Papa.parse('rem-fragen.csv', {
+  download: true,
+  header: true,       // erste Zeile = Header
+  skipEmptyLines: true,
+  complete: function(results) {
+    // Nur die zweite Spalte (Szenario) extrahieren
+    szenarien = results.data.map(row => row.Szenario.trim()).filter(s => s.length > 0);
+    console.log('Szenarien geladen:', szenarien.length);
+  },
+  error: function(err) {
+    console.error('Fehler beim Laden/Parsen der CSV:', err);
+  }
+});
 
 // Zufälliges Szenario anzeigen
 function randomFrage() {
   if (szenarien.length === 0) {
-    document.getElementById('frage').textContent = 'Szenarien werden geladen...';
+    document.getElementById('frage').textContent = 'Szenarien werden noch geladen...';
     return;
   }
   const zufall = Math.floor(Math.random() * szenarien.length);
