--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Fragen Generator</title>
   <style>
-    body { font-family: OpenSans; text-align: center; margin-top: 80px; }
+    body { font-family: Arial; text-align: center; margin-top: 80px; }
     button { padding: 15px; font-size: 18px; cursor: pointer; }
     #frage { font-size: 24px; margin-top: 40px; max-width: 800px; margin-left: auto; margin-right: auto; }
   </style>
