--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <title>Fragen Generator</title>
   <style>
-    body { font-family: Arial; text-align: center; margin-top: 80px; }
-    button { padding: 15px; font-size: 18px; cursor: pointer; }
-    #frage { font-size: 24px; margin-top: 40px; max-width: 800px; margin-left: auto; margin-right: auto; }
+    body {
+      font-family: Arial;
+      margin-top: 80px;
+      text-align: center; /* zentriert Überschrift & Button */
+    }
+
+    h1 {
+      text-align: center; /* Überschrift bleibt zentriert */
+    }
+
+    button {
+      padding: 15px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    #frage {
+      font-size: 24px;
+      margin-top: 40px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: justify; /* Blocksatz nur für Szenario-Text */
+      line-height: 1.4;    /* bessere Lesbarkeit */
+    }
   </style>
 </head>
 <body>
