--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-<h1>Fragen Generator</h1>
+<h1>Szenarien-Generator</h1>
 
 <button onclick="randomFrage()">Szenario generieren</button>
 
