--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script>
 let szenarien = [];
 
-fetch('rem-fragen.csv')
+fetch('rem-fragen_neu.csv')
   .then(response => {
     if (!response.ok) {
       document.getElementById('debug').textContent = 'FEHLER: CSV nicht gefunden! (' + response.status + ')';
