--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-<h1>Fragen Generator</h1>
+<h1>Szenarien-Generator</h1>
 <button onclick="randomFrage()">Szenario generieren</button>
 <p id="debug"></p>
 <p id="anwendungsprofil"></p>
