--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <button onclick="randomFrage()">Szenario generieren</button>
 <p id="debug"></p>
 <p id="anwendungsprofil"></p>
-<p id="frage">Klicke auf den Button, um ein Szenario anzuzeigen.</p>
+<p id="anwendungsprofil">Klicke auf den Button, um ein Szenario anzuzeigen.</p>
 
 <script>
 let szenarien = [];
