--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <h1>Szenarien-Generator für Remos Evaluation</h1>
 <button onclick="randomFrage()">Szenario generieren</button>
 <p id="debug"></p>
-<p id="anwendungsprofil"></p>
 <p id="anwendungsprofil">Klicke auf den Button, um ein Szenario anzuzeigen.</p>
+<p id="frage"></p>
 
 <script>
 let szenarien = [];
