--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Fragen Generator</title>
+  <title>Szenarien-Generator</title>
   <style>
     body { 
       font-family: Arial; 
