--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       font-family: Arial; 
       margin-top: 80px; 
       text-align: center; 
-      background-color: "#FFFFFF";
-      font color= "#003480";
+      background-color: #FFFFFF;
+      font color= #003480;
     }
     h1 { 
       text-align: center; 
