--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin-top: 80px; 
       text-align: center; 
       background-color: #FFFFFF;
-      font color= #003480;
+      font color: #003480;
     }
     h1 { 
       text-align: center; 
